2006-08-25  Paul Eggert  <eggert@cs.ucla.edu>

	* NEWS: Recommend M4 1.4.6 instead of 1.4.5.
	* README: Likewise.
	* doc/autoconf.texi (Introduction, Why GNU M4): Likewise.

2006-08-24  Paul Eggert  <eggert@cs.ucla.edu>

	Rework to use more-modern build style.
	Many files are renamed; all uses of their names were changed.
	* .x-sc_trailing_blank: Renamed from .x-sc_trailing_space.
	* .x-sc_useless_cpp_parens: New file.
	* build-aux/config.guess: Renamed from config/config.guess.  Update.
	* build-aux/config.sub: Renamed from config/config.sub.  Update.
	* build-aux/elisp-comp: Renamed from config/elisp-comp.
	* build-aux/install-sh: Renamed from config/install-sh.  Update.
	* build-aux/mdate-sh: Renamed from config/mdate-sh.
	* build-aux/missing: Renamed from config/missing.
	* build-aux/texinfo.tex: Renamed from config/texinfo.tex.  Update.
	* build-aux/vc-list-files: Renamed from config/vc-list-files.
	* config/Makefile.am: Removed.
	* config/mkinstalldirs: Removed.
	* config/move-if-change: Removed.
	* m4/m4.m4: Renamed from config/m4.m4.  Add (C) to copyright notice.
	* Makefile.am (SUBDIRS): Remove config.
	(ACLOCAL_AMFLAGS): Include from m4, not config.
	(EXTRA_DIST): Add config/announce-gen, config/prev-version.txt.
	(WGET, WGETFLAGS): New macros, since Makefile.maint no longer does this.
	(autom4te-update): Rewrite with a loop.  Get from gnulib, not automake.
	Fail if there's an error.
	* Makefile.cfg (move_if_change): Remove.
	(wget_files): Remove.
	(cvs_executable_files): New macro.
	(cvs_files): Use it.  Remove mkinstalldirs.  Add fdl.texi.
	(executable-update): Use $(cvs_executable_files).
	(local-checks-to-skip): Remove.
	* Makefile.maint: Merge from coreutils, plus add our own changes
	(gzip_rsyncable): New macro.
	(GZIP_ENV): Use it.
	(CVS_LIST): Use build-aux/vc-list-files.
	(VERSION_REGEXP): New macro.
	(local-checks-available): Add patch-check, $(syntax-check-rules),
	check-AUTHORS.
	(syntax-check-rules): Compute dynamically.